--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -1,5 +1,11 @@
+# Basic options
 setw -g mode-keys vi
+set -g base-index 1
+set -s escape-time 0
+set -g mouse on
+set-option -g allow-rename off
 
+# Keybindings
 unbind C-b
 set-option -g prefix C-Space
 bind Space send-prefix
@@ -8,15 +14,29 @@ bind-key C-Space last-pane
 bind \ split-window -h -c '#{pane_current_path}'  # Split panes horizontal
 bind - split-window -v -c '#{pane_current_path}'  # Split panes vertically
 
-set -g base-index 1
+# Vim style pane selection
+bind h select-pane -L
+bind j select-pane -D 
+bind k select-pane -U
+bind l select-pane -R
 
-set -s escape-time 0
+# Use Alt-vim keys without prefix key to switch panes
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D 
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
 
-# Enable mouse mode (tmux 2.1 and above)
-set -g mouse on
+# Use Alt-arrow keys without prefix key to switch panes
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
 
-set-option -g allow-rename off
+# Shift arrow to switch windows
+bind -n S-Left  previous-window
+bind -n S-Right next-window
 
+# Plugins
 # List of plugins
 set -g @shell_mode 'vi'
 set -g @plugin 'tmux-plugins/tpm'
@@ -28,11 +48,6 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'sei40kr/tmux-airline-dracula'
 
 set -g @continuum-restore 'on'
-
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'git@github.com/user/plugin'
-# set -g @plugin 'git@bitbucket.com/user/plugin'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
