--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -4,6 +4,7 @@ set -g base-index 1
 set -s escape-time 0
 set -g mouse on
 set-option -g allow-rename off
+set-option -g history-limit 100000
 
 # Keybindings
 unbind C-b
@@ -15,10 +16,8 @@ bind \ split-window -h -c '#{pane_current_path}'  # Split panes horizontal
 bind - split-window -v -c '#{pane_current_path}'  # Split panes vertically
 
 # Vim style pane selection
-bind h select-pane -L
-bind j select-pane -D 
-bind k select-pane -U
-bind l select-pane -R
+bind h previous-window
+bind l next-window 
 
 # Use Alt-vim keys without prefix key to switch panes
 bind -n M-h select-pane -L
@@ -35,6 +34,11 @@ bind -n M-Down select-pane -D
 # Shift arrow to switch windows
 bind -n S-Left  previous-window
 bind -n S-Right next-window
+
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
+# Status bar
+set -g status-right '#[bold] %d/%m #[bold] %H:%M:%S '
 
 # Plugins
 # List of plugins
