Added keyboard related configs. Removed date and time from tmux status bar.

--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -38,7 +38,8 @@ bind -n S-Right next-window
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 # Status bar
-set -g status-right '#[bold] %d/%m #[bold] %H:%M:%S '
+#set -g status-right '#[bold] %d/%m #[bold] %H:%M:%S '
+set -g status-right ''
 
 # Plugins
 # List of plugins
