--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -1,3 +1,5 @@
+#source-file ~/.tmux/tmux-reset
+
 # Basic options
 setw -g mode-keys vi
 set -g base-index 1
@@ -36,23 +38,32 @@ bind -n S-Left  previous-window
 bind -n S-Right next-window
 
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+bind-key -n C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
 
 # Status bar
 #set -g status-right '#[bold] %d/%m #[bold] %H:%M:%S '
 set -g status-right ''
+
+setw -g window-status-style "fg=white"
+setw -g window-status-format "#I:#W#{?window_flags,#{window_flags}, }"
+setw -g window-status-current-style "fg=black bg=yellow"
+setw -g window-status-current-format "#I:#W#{?window_flags,#{window_flags}, }"
+setw -g status-left "[#S] "
+setw -g status-left-length 0
+set -g status-left-style "bg=colour1"
 
 # Plugins
 # List of plugins
 set -g @shell_mode 'vi'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'sei40kr/tmux-airline-dracula'
 
 set -g @continuum-restore 'on'
+
+set -g default-terminal "tmux-256color"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
