--- a/config/i3status/config
+++ b/config/i3status/config
@@ -39,5 +39,5 @@ disk "/" {
 volume master {
         format = "♪: %volume"
         format_muted = "♪: muted (%volume)"
-        device = "pulse:0"
+        device = "sysdefault"
 }
